--- a/README.org
+++ b/README.org
@@ -13,3 +13,6 @@
 
 - Teaching material:https://rformassspectrometry.github.io/book/
 - Scripts: https://github.com/lgatto/2025-11-physalia
+- Spectra: https://rformassspectrometry.github.io/Spectra
+- PSMatch: https://rformassspectrometry.github.io/PSMatch
+- QFeatures: https://rformassspectrometry.github.io/QFeatures
